# node-jpeg-turbo

./: .npmignore  CMakeLists.txt  README.md  include.cmake  index.js  module.d.ts  package.json
.github/workflows/: node.yaml  test.yaml
src/: exports.cc  read_dct.cc  read_dct.h  util.cc  util.h  write_dct.cc  write_dct.h
tests/: compress.spec.js  decompress.spec.js  github_logo.jpg.corrupted  read_dct.spec.js
